<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BorewellActivity">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/b_add_data"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:gravity="center"
                android:text="@string/add_borewell_data"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/but_registerborewell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="actionclick"
                android:text="@string/btn_registerborewell" />

            <Button
                android:id="@+id/b_water_struct_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_waterstructlevel" />


            <Button
                android:id="@+id/b_water_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_waterlevel" />

            <Button
                android:id="@+id/b_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_borewellsection" />

            <Button
                android:id="@+id/b_phours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_pumpinghrs" />

        </LinearLayout>


</RelativeLayout>