<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BorewellMain">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="Add Borewell Data"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/but_registerborewell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_registerborewell" />

        <Button
            android:id="@+id/b_water_struct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_waterstructlevel" />


        <Button
            android:id="@+id/b_water_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_waterlevel" />

        <Button
            android:id="@+id/bore_sect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_borewellsection" />

        <Button
            android:id="@+id/b_pump_hrs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pumpinghrs" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>