<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.demandAnalysis.NewDemandAnalysis">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:ignore="UselessParent">


            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:gravity="center"
                android:text="@string/demand_analysis"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:padding="1dp"
                android:text="@string/daily_extrat_demand"
                android:gravity="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:padding="1dp"
                android:text="@string/week_extrat_demand"
                android:gravity="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:padding="1dp"
                android:text="@string/month_extrat_demand"
                android:gravity="center"
                android:textColor="#000000" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:padding="1dp"
                android:text="@string/year_extrat_demand"
                android:gravity="center"
                android:textColor="#000000" />


            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:padding="1dp"
                android:text="@string/gwater_remains"
                android:gravity="center"
                android:textColor="#000000" />

    </LinearLayout>

</FrameLayout>